--- a/style.css
+++ b/style.css
@@ -170,3 +170,90 @@
 .blank-image3 {
 	margin: 30px 15px;
 }
+
+/* total Completed Works Section */
+
+.total-completed-work {
+	padding: 90px 0;
+	background-color: #f8f8f8;
+}
+.total-completed-work-contents {
+	text-align: center;
+	padding-bottom: 85px;
+}
+.total-completed-work-contents h2 {
+	text-align: center;
+	font-size: 48px;
+}
+.total-work-section {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.total-single-works {
+	display: inline-block;
+	width: 185px;
+	height: 182px;
+	background: #ffffff;
+	box-shadow: 0px 13px 16px rgba(0, 0, 0, 0.1);
+	border-radius: 40px 0px;
+	padding-top: 55px;
+	/* padding-left: 50px; */
+}
+.total-single-works h2 {
+	font-size: 48px;
+	line-height: 60px;
+	text-align: center;
+	color: #212121;
+}
+.total-single-works p {
+	font-size: 15px;
+	line-height: 30px;
+	text-align: center;
+	color: #212121;
+}
+
+/* Testimonial Section Start */
+
+.testimonial-section {
+	padding: 100px 0;
+}
+.testimonial-contents {
+	text-align: center;
+	padding-bottom: 70px;
+}
+.testimonial-contents h2 {
+	font-size: 48px;
+}
+.what-clients-say {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+.singles-client-what-says {
+	width: 571px;
+	height: 226px;
+	background: #ffffff;
+	box-shadow: 7px 7px 30px 5px rgba(33, 33, 33, 0.1);
+	border-radius: 0px;
+	text-align: center;
+	padding-top: 50px;
+}
+.singles-client-what-says h3 {
+	font-size: 24px;
+	line-height: 33px;
+	color: #212121;
+}
+.singles-client-what-says h5 {
+	font-size: 12px;
+	line-height: 22px;
+
+	color: #646464;
+}
+.singles-client-what-says p {
+	font-size: 15px;
+	line-height: 28px;
+	color: #646464;
+	margin: 10px 70px;
+}
